data/derived/comb/progs/unify/prog8535.ml.out
Characters 732-754:
  | 17| 18  |19 | 23 | 25  -> buildCirc(build(rand, depth-1))
                                       ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * expr
